# runix

./: .cz.toml  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/runix/: Cargo.toml  README.md
crates/runix-derive/: Cargo.toml
crates/runix-ffi/: Cargo.toml  build.rs
crates/runix-ffi/include/: nix.h
crates/runix-ffi/src/: lib.rs  nix.cpp
crates/runix/src/: command.rs  flake_metadata.rs  flake_ref.rs  installable.rs  lib.rs  narinfo.rs  registry.rs  store_path.rs  uri_parser.rs  url_parser.rs
crates/runix/src/arguments/: common.rs  config.rs  eval.rs  flake.rs  legacy.rs  mod.rs  source.rs
crates/runix/src/command_line/: flag.rs  mod.rs
crates/runix/src/flake_ref/: file.rs  git.rs  git_service.rs  indirect.rs  lock.rs  mod.rs  path.rs  protocol.rs
crates/runix/src/flake_ref2/: file.rs  git.rs  git_service.rs  indirect.rs  lock.rs  mod.rs  path.rs  protocol.rs
pkgs/commitizen-with-bump/: default.nix
pkgs/pre-commit-checks/: default.nix
pkgs/runix/: catalog.json  default.nix  flox.nix  manifest.json
pkgs/rustfmt/: default.nix
shells/ci/: default.nix
shells/rust-env/: default.nix
