[package]
name = "runix-derive"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/flox/runix/"
homepage = "https://github.com/flox/runix/"
description = "Derive macros for runix"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
