[package]
name = "runix-ffi"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"
keywords = ["nix", "ffi", "wrapper"]
repository = "https://github.com/flox/runix/"
homepage = "https://github.com/flox/runix/"
description = "A type-safe Rust interface to the Nix CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"


[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3"

# async-trait = "0.1.71"
# derive_more = "0.99.17"
# log = "0.4.17"
# runix-derive = "0.1"
# serde_with = "3.0.0"
# serde_urlencoded = "0.7.1"
# url = { version = "2.4", features = ["serde"] }
# percent-encoding = "2.2"
# shell-escape = "0.1.5"
# chrono = { version = "0.4.26", features = ["serde"] }
# regex = "1.7.2"
# once_cell = "1.17.1"

[dev-dependencies]
tempfile = "3"
pathdiff = "0.2.1"
