[package]
name = "runix"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
derive_more = "0.99.17"
log = "0.4.17"
runix-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.2.0"
shell-escape = "0.1.5"
tokio = { version = "1.21", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["tokio-util", "io-util"] }
thiserror = "1.0"
url = "2.3"
